Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>YOU MUST DIE</h1>
-        <p>Coder Dino</p>
-        <p>Will code for food</p>
+        <p>Coder Hack</p>
+        <p>Look behide you >:)</p>
         <img src="http://dreamicus.com/data/devil/devil-02.jpg">
     </body>
 </html>
